--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-spotify-web-playback": "^0.9.1",
+    "react-timeago": "^6.2.1",
     "socket.io-client": "^4.4.1",
     "spotify-web-api-node": "^5.0.2",
     "timeago.js": "^4.0.2",
