--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "muse-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.4.0",
+    "node": "16.13.2"
+  },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
