make dynamic socket connection ping

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "socket.io-client": "^4.4.1",
     "spotify-web-api-node": "^5.0.2",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
